# EightQueens

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  GUIManager.cpp  GUIManager.h  Serial.cpp  Serial.h  main.cpp  menu.cpp  menu.h  screen.h  screens.h  solver.cpp  solver.h
PrograArduino/: PrograArduino.ino
